# structured-streaming-job-pyspark

./: .gitignore  README.md  pyproject.toml  requirements.txt
jobs/: sample_job.py
scripts/: initialize-cluster.sh
structured_streaming/data_transformation/: tranformations.py
structured_streaming/storage/: write_storage.py
structured_streaming/stream_processor/: kafka_consumer.py
tests/: __init__.py
tests/data_tranformation/: test_tranformations.py
tests/storage/: test_write_storage.py
tests/stream_processor/: test_kafka_consumer.py
