[tool.poetry]
name = "structured-streaming"
version = "0.1.0"
description = ""
authors = ["Andre Sousa <andresousa@google.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"
pyspark = "3.1.3"
quinn = "^0.9.0"
schema = "^0.7.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
